syntax = "proto3";

// IMPORTANT: The proto *package* must match the aggregator-service
// definition so that the fully-qualified gRPC service name is the
// same ("vital.VitalService"). The Java classes remain under the
// org.intel.grpc package via java_package.
package vital;

option java_multiple_files = true;
option java_package = "org.intel.grpc";
option java_outer_classname = "VitalProto";

import "google/protobuf/empty.proto";

// Unified Vital message supporting both waveform and numeric data.
message Vital {
  string device_id = 1;
  string metric    = 2;
  double value     = 3;
  string unit      = 4;
  int64 timestamp  = 5;

  // Optional waveform payload (for SampleArray-based signals).
  // If empty, this is a numeric-only vital.
  repeated float waveform = 6;
  int32 waveform_frequency_hz = 7;

  // Additional metadata (optional; currently unused by DDS-bridge
  // but present in the aggregator's schema).
  map<string, string> metadata = 8;
}

// Service definition must mirror the aggregator-service so the
// Java client can talk to the Python gRPC server.
service VitalService {
  // Bidirectional streaming: services send vitals TO aggregator.
  rpc StreamVitals(stream Vital) returns (google.protobuf.Empty);

  // Optional unary RPC kept for parity with aggregator-service.
  rpc PublishVital(Vital) returns (google.protobuf.Empty);
}
